--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,19 @@
 # platform: linux-64
 _libgcc_mutex=0.1=main
 _openmp_mutex=4.5=1_gnu
+aiohttp=3.8.1=pypi_0
+aiohttp-retry=2.4.6=pypi_0
+aiosignal=1.2.0=pypi_0
+appdirs=1.4.4=pypi_0
+async-timeout=4.0.1=pypi_0
+asyncssh=2.8.1=pypi_0
+atpublic=2.3=pypi_0
 attrs=21.2.0=pyhd3eb1b0_0
 aws-c-common=0.4.57=he6710b0_1
 aws-c-event-stream=0.1.6=h2531618_5
 aws-checksums=0.1.9=he6710b0_0
 aws-sdk-cpp=1.8.185=hce553d0_0
+backcall=0.2.0=pyhd3eb1b0_0
 blas=1.0=mkl
 bottleneck=1.3.2=py38heb32a55_1
 brotli=1.0.9=he6710b0_2
@@ -23,34 +31,63 @@ charset-normalizer=2.0.4=pyhd3eb1b0_0
 click=7.1.2=pyhd3eb1b0_0
 click-plugins=1.1.1=pyhd3eb1b0_0
 cligj=0.7.2=py38h06a4308_0
+colorama=0.4.4=pypi_0
+commonmark=0.9.1=pypi_0
+configobj=5.0.6=pypi_0
 cryptography=36.0.0=py38h9ce1e76_0
 cudatoolkit=10.2.89=hfd86e86_1
 curl=7.80.0=h7f8727e_0
 cycler=0.11.0=pyhd3eb1b0_0
+debugpy=1.5.1=py38h295c915_0
+decorator=5.1.0=pyhd3eb1b0_0
+dictdiffer=0.9.0=pypi_0
+diskcache=5.3.0=pypi_0
+distro=1.6.0=pypi_0
+dpath=2.0.5=pypi_0
+dulwich=0.20.26=pypi_0
+dvc=2.9.2=pypi_0
+entrypoints=0.3=py38_0
 expat=2.4.1=h2531618_2
 ffmpeg=4.2.2=h20bf706_0
 fiona=1.8.13.post1=py38hc820daa_0
+flatten-dict=0.4.2=pypi_0
+flufl-lock=6.0=pypi_0
 fontconfig=2.13.1=h6c09931_0
 fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.11.0=h70c0345_0
 freexl=1.0.6=h27cfd23_0
+frozenlist=1.2.0=pypi_0
+fsspec=2021.11.1=pypi_0
+ftfy=6.0.3=pypi_0
+funcy=1.16=pypi_0
+future=0.18.2=pypi_0
 gdal=3.0.2=py38h4694593_1
 geopandas=0.9.0=py_1
 geopandas-base=0.9.0=py_1
 geos=3.8.0=he6710b0_0
 geotiff=1.6.0=h21e8280_0
 giflib=5.2.1=h7b6447c_0
+gitdb=4.0.9=pypi_0
+gitpython=3.1.24=pypi_0
 glib=2.69.1=h5202010_0
 gmp=6.2.1=h2531618_2
 gnutls=3.6.15=he1e5248_0
+grandalf=0.6=pypi_0
 hdf4=4.2.13=h3ca952b_2
 hdf5=1.10.6=hb1b8bf9_0
 icu=58.2=he6710b0_3
 idna=3.3=pyhd3eb1b0_0
+importlib-resources=5.4.0=pypi_0
 intel-openmp=2021.4.0=h06a4308_3561
+ipykernel=6.4.1=py38h06a4308_1
+ipython=7.29.0=py38hb070fc8_0
+ipython_genutils=0.2.0=pyhd3eb1b0_1
+jedi=0.18.0=py38h06a4308_1
 joblib=1.1.0=pyhd3eb1b0_0
 jpeg=9d=h7f8727e_0
 json-c=0.13.1=h1bed415_0
+jupyter_client=7.0.6=pyhd3eb1b0_0
+jupyter_core=4.9.1=py38h06a4308_0
 kealib=1.4.14=h54c064f_0
 kiwisolver=1.3.1=py38h2531618_0
 krb5=1.19.2=hac12032_0
@@ -75,6 +112,7 @@ libnghttp2=1.46.0=hce63b2e_0
 libopus=1.3.1=h7b6447c_0
 libpng=1.6.37=hbc83047_0
 libpq=12.9=hc2c5182_1
+libsodium=1.0.18=h7b6447c_0
 libspatialindex=1.9.3=h2531618_0
 libspatialite=4.3.0a=h793db0d_0
 libssh2=1.9.0=h1ba5d50_1
@@ -91,15 +129,20 @@ libxcb=1.14=h7b6447c_0
 libxml2=2.9.12=h03d6c58_0
 lightgbm=3.2.1=py38h295c915_0
 lz4-c=1.9.3=h295c915_1
+mailchecker=4.1.6=pypi_0
 mapclassify=2.4.3=pyhd3eb1b0_0
 matplotlib-base=3.5.0=py38h3ed280b_0
+matplotlib-inline=0.1.2=pyhd3eb1b0_2
 mkl=2021.4.0=h06a4308_640
 mkl-service=2.4.0=py38h7f8727e_0
 mkl_fft=1.3.1=py38hd3c417c_0
 mkl_random=1.2.2=py38h51133e4_0
+multidict=5.2.0=pypi_0
 munch=2.5.0=pyhd3eb1b0_0
 munkres=1.1.4=py_0
+nanotime=0.5.2=pypi_0
 ncurses=6.3=h7f8727e_2
+nest-asyncio=1.5.1=pyhd3eb1b0_0
 nettle=3.7.3=hbbd107a_1
 networkx=2.6.3=pyhd3eb1b0_0
 numexpr=2.7.3=py38h22e1b3c_1
@@ -111,44 +154,82 @@ openjpeg=2.4.0=h3ad879b_0
 openssl=1.1.1l=h7f8727e_0
 packaging=21.3=pyhd3eb1b0_0
 pandas=1.3.4=py38h8c16a72_0
+parso=0.8.2=pyhd3eb1b0_0
+pathspec=0.9.0=pypi_0
 pcre=8.45=h295c915_0
+pexpect=4.8.0=pyhd3eb1b0_3
+phonenumbers=8.12.39=pypi_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
 pillow=8.4.0=py38h5aabda8_0
 pip=21.2.4=py38h06a4308_0
 pixman=0.40.0=h7f8727e_1
+ply=3.11=pypi_0
 poppler=0.81.0=h01f5e8b_2
 poppler-data=0.4.10=h06a4308_0
 postgresql=12.9=hc2c5182_1
 proj=6.2.1=haa6030c_0
+prompt-toolkit=3.0.20=pyhd3eb1b0_0
+psutil=5.8.0=pypi_0
+ptyprocess=0.7.0=pyhd3eb1b0_2
+pyasn1=0.4.8=pypi_0
 pycparser=2.21=pyhd3eb1b0_0
+pydot=1.4.2=pypi_0
+pygit2=1.7.2=pypi_0
+pygments=2.10.0=pyhd3eb1b0_0
+pygtrie=2.4.2=pypi_0
 pyopenssl=21.0.0=pyhd3eb1b0_1
 pyparsing=3.0.4=pyhd3eb1b0_0
 pyproj=2.6.1.post1=py38hb3025e9_1
 pysocks=1.7.1=py38h06a4308_0
 python=3.8.12=h12debd9_0
+python-benedict=0.24.3=pypi_0
 python-dateutil=2.8.2=pyhd3eb1b0_0
+python-fsutil=0.5.0=pypi_0
+python-slugify=5.0.2=pypi_0
 pytorch=1.10.1=py3.8_cuda10.2_cudnn7.6.5_0
 pytorch-mutex=1.0=cuda
 pytz=2021.3=pyhd3eb1b0_0
+pyyaml=6.0=pypi_0
+pyzmq=22.3.0=py38h295c915_2
 readline=8.1=h27cfd23_0
 requests=2.26.0=pyhd3eb1b0_0
+rich=10.16.1=pypi_0
 rtree=0.9.7=py38h06a4308_1
+ruamel-yaml=0.17.17=pypi_0
+ruamel-yaml-clib=0.2.6=pypi_0
 scikit-learn=1.0.1=py38h51133e4_0
 scipy=1.7.1=py38h292c36d_2
+scmrepo=0.0.4=pypi_0
 setuptools=58.0.4=py38h06a4308_0
 shapely=1.7.1=py38h1728cc4_0
+shortuuid=1.0.8=pypi_0
+shtab=1.5.2=pypi_0
 six=1.16.0=pyhd3eb1b0_0
+smmap=5.0.0=pypi_0
 sqlite=3.36.0=hc218d9a_0
+tabulate=0.8.9=pypi_0
+text-unidecode=1.3=pypi_0
 threadpoolctl=2.2.0=pyh0d69192_0
 tiledb=2.2.9=hffe1d7a_0
 tk=8.6.11=h1ccaba5_0
+toml=0.10.2=pypi_0
 torchaudio=0.10.1=py38_cu102
 torchvision=0.11.2=py38_cu102
+tornado=6.1=py38h27cfd23_0
 tqdm=4.62.3=pyhd3eb1b0_1
+traitlets=5.1.1=pyhd3eb1b0_0
 typing_extensions=3.10.0.2=pyh06a4308_0
 urllib3=1.26.7=pyhd3eb1b0_0
+voluptuous=0.12.2=pypi_0
+wcwidth=0.2.5=pyhd3eb1b0_0
 wheel=0.37.0=pyhd3eb1b0_1
 x264=1!157.20191217=h7b6447c_0
 xerces-c=3.2.3=h780794e_0
+xmltodict=0.12.0=pypi_0
 xz=5.2.5=h7b6447c_0
+yarl=1.7.2=pypi_0
+zc-lockfile=2.0=pypi_0
+zeromq=4.3.4=h2531618_0
+zipp=3.6.0=pypi_0
 zlib=1.2.11=h7f8727e_4
 zstd=1.4.9=haebb681_0
